# simple-dicom-mcp

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  async_storage_commitment.md  configuration.yaml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/dicom_mcp/: __init__.py  __main__.py  attributes.py  config.py  dicom_client.py  dicom_client_base.py  dicom_client_downloads.py  dicom_client_moves.py  dicom_client_pdf.py  dicom_client_queries.py  errors.py  manifest.py  server.py  server_prompt.py  server_tools_common.py  server_tools_core.py  server_tools_queries.py  server_tools_transfers.py
tests/: README.md  docker-compose.yaml  orthanc.configuration.json  synthetic-pet-ct-reports.md  test.py  test_config_calling_aet.py  test_dicom_client_limit.py  test_dicom_client_serialization.py  test_dicom_mcp.py  test_dicom_move.py  test_dicom_pdf.py  test_dicom_servers.yaml  test_downloads_integration.py  test_downloads_unit.py  test_main.py  test_manifest.py  test_storage_security.py
