[project]
name = "dicom-mcp"
version = "0.1.1"
description = "MCP server for querying DICOM metadata, moving studies, and downloading exams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pynetdicom>=2.1.1",
    "pydicom>=2.4.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
    "pytest-cov>=6.0.0",
    "reportlab",
    "ruff>=0.5.7",
    "pyright>=1.1.0",
    "pre-commit>=3.7.0"
]
[project.scripts]
dicom-mcp = "dicom_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services",
]
